--- a/po/nl.po
+++ b/po/nl.po
@@ -18,10 +18,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: util-linux 2.13-pre1\n"
+"Project-Id-Version: util-linux 2.13-pre2\n"
 "Report-Msgid-Bugs-To: Adrian Bunk <bunk@stusta.de>\n"
 "POT-Creation-Date: 2005-08-14 18:14+0200\n"
-"PO-Revision-Date: 2005-08-03 22:12+0100\n"
+"PO-Revision-Date: 2005-08-19 20:27+0100\n"
 "Last-Translator: Luk Claes <luk.claes@ugent.be>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "MIME-Version: 1.0\n"
@@ -174,9 +174,9 @@ msgstr "gebruik: %s [ -n ] apparaat\n"
 #: disk-utils/mkfs.cramfs.c:778 disk-utils/mkfs.minix.c:626
 #: disk-utils/mkswap.c:522 misc-utils/ddate.c:179 misc-utils/rename.c:79
 #: misc-utils/script.c:142 sys-utils/readprofile.c:197
-#, fuzzy, c-format
+#, c-format
 msgid "%s (%s)\n"
-msgstr "%s: %s (%s)\n"
+msgstr "%s (%s)\n"
 
 #: disk-utils/fdformat.c:130
 #, c-format
@@ -866,9 +866,9 @@ msgid "%s: Out of memory!\n"
 msgstr "%s: Geheugentekort!\n"
 
 #: disk-utils/mkfs.c:103
-#, fuzzy, c-format
+#, c-format
 msgid "mkfs (%s)\n"
-msgstr "%s: %s (%s)\n"
+msgstr "mkfs (%s)\n"
 
 #: disk-utils/mkfs.cramfs.c:124
 #, c-format
@@ -7136,9 +7136,9 @@ msgid "%s: can't read temporary file.\n"
 msgstr "%s: kan tijdelijke bestand niet lezen.\n"
 
 #: misc-utils/cal.c:313
-#, fuzzy, c-format
+#, c-format
 msgid "%s from %s\n"
-msgstr "%s van %s%s\n"
+msgstr "%s van %s\n"
 
 #: misc-utils/cal.c:327
 msgid "illegal month value: use 1-12"
@@ -10086,13 +10086,6 @@ msgstr "Invoerregel te lang.\n"
 #, c-format
 msgid "Out of memory when growing buffer.\n"
 msgstr "Geheugentekort bij groeiende buffer.\n"
-
-#, fuzzy
-#~ msgid "mkfs from %s\n"
-#~ msgstr "%s van %s%s\n"
-
-#~ msgid "mkfs version %s (%s)\n"
-#~ msgstr "mkfs versie %s (%s)\n"
 
 #~ msgid "flock: unknown option, aborting.\n"
 #~ msgstr "flock: onbekende optie, afbreken.\n"
