--- a/po/tr.po
+++ b/po/tr.po
@@ -5,15 +5,15 @@
 # this file and modified versions, provided that this
 # header is not removed and modified versions are marked
 # as such. No warranty.
-# Nilgün Belma Bugüner <nilgun@superonline.com>, 2001, ..., 2005.
+# Nilgün Belma Bugüner <nilgun@buguner.name.tr>, 2001, ..., 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: util-linux 2.13-pre1\n"
+"Project-Id-Version: util-linux 2.13-pre2\n"
 "Report-Msgid-Bugs-To: Adrian Bunk <bunk@stusta.de>\n"
 "POT-Creation-Date: 2005-08-14 18:14+0200\n"
-"PO-Revision-Date: 2005-08-04 12:42+0300\n"
-"Last-Translator: Nilgün Belma Bugüner <nilgun@superonline.com>\n"
+"PO-Revision-Date: 2005-08-17 12:06+0300\n"
+"Last-Translator: Nilgün Belma Bugüner <nilgun@buguner.name.tr>\n"
 "Language-Team: Turkish <gnu-tr-u12a@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -167,9 +167,9 @@ msgstr "kullanımı: %s [ -n ] AYGIT\n"
 #: disk-utils/mkfs.cramfs.c:778 disk-utils/mkfs.minix.c:626
 #: disk-utils/mkswap.c:522 misc-utils/ddate.c:179 misc-utils/rename.c:79
 #: misc-utils/script.c:142 sys-utils/readprofile.c:197
-#, fuzzy, c-format
+#, c-format
 msgid "%s (%s)\n"
-msgstr "%s: %s (%s)\n"
+msgstr "%s: (%s)\n"
 
 #: disk-utils/fdformat.c:130
 #, c-format
@@ -858,9 +858,9 @@ msgid "%s: Out of memory!\n"
 msgstr "%s: Bellek yetersiz!\n"
 
 #: disk-utils/mkfs.c:103
-#, fuzzy, c-format
+#, c-format
 msgid "mkfs (%s)\n"
-msgstr "%s: %s (%s)\n"
+msgstr "mkfs (%s)\n"
 
 #: disk-utils/mkfs.cramfs.c:124
 #, c-format
@@ -7132,9 +7132,9 @@ msgid "%s: can't read temporary file.\n"
 msgstr "%s: geçici dosya okunamıyor.\n"
 
 #: misc-utils/cal.c:313
-#, fuzzy, c-format
+#, c-format
 msgid "%s from %s\n"
-msgstr "%2$s%3$s deki %1$s\n"
+msgstr "%2$s deki %1$s\n"
 
 #: misc-utils/cal.c:327
 msgid "illegal month value: use 1-12"
@@ -8567,7 +8567,7 @@ msgstr ""
 "  -t ds-türü  -a seçeneği ile kullanıldığında sadece türü belirtilen dosya\n"
 "              sistemlerini ayırır\n"
 "\n"
-"Çeviri hatalarını <gnu-tr-u12a@lists.sourceforge.net> adresine bildiriniz\n"
+"Çeviri hatalarını <gnu-tr@belgeler.org> adresine bildiriniz\n"
 "Daha fazla bilgi edinmek için 'man 8 umount' yazınız.\n"
 
 #: mount/umount.c:546
@@ -10092,13 +10092,6 @@ msgstr "Girdi satırı çok uzun.\n"
 #, c-format
 msgid "Out of memory when growing buffer.\n"
 msgstr "Tampon büyütülürken bellek yetmedi.\n"
-
-#, fuzzy
-#~ msgid "mkfs from %s\n"
-#~ msgstr "%2$s%3$s deki %1$s\n"
-
-#~ msgid "mkfs version %s (%s)\n"
-#~ msgstr "mkfs sürüm %s (%s)\n"
 
 #~ msgid "flock: unknown option, aborting.\n"
 #~ msgstr "flock: bilinmeyen seçenek, çıkılıyor\n"
