--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+util-linux 2.13-pre4
+
+* don't build fdisk on m68k (Mike Frysinger)
+* misc build system and documentation fixes
+* removed program: clear
+
 util-linux 2.13-pre3
 
 * misc buld system fixes
@@ -17,7 +23,7 @@ util-linux 2.13-pre1
 * use GNU autoconf/automake/libtool for building
 * added schedutils
 * removed support for curses implementations other than ncurses
-* removed programs: arch, passwd, rescuept, setfdprm
+* removed programs: arch, passwd, rescuept, setfdprm, sln
 * removed mkminix-0.1/
 * misc fixes and documentation updates
 * new translation: vi
