--- a/mount/mount.8
+++ b/mount/mount.8
@@ -582,6 +582,9 @@ until the network has been enabled on the system).
 Do not update inode access times on this file system (e.g, for faster
 access on the news spool to speed up news servers).
 .TP
+.B nodiratime
+Do not update directory inode access times on this filesystem.
+.TP
 .B noauto
 Can only be mounted explicitly (i.e., the
 .B \-a
