--- a/po/ca.po
+++ b/po/ca.po
@@ -2,7 +2,7 @@
 # Copyright © 2002, 2003, 2004, 2005 Free Software Foundation, Inc.
 # Antoni Bella Perez <bella5@teleline.es>, 2002, 2003.
 # Jordi Mallach <jordi@gnu.org>, 2004, 2005.
-# Josep Puigdemont <josep@imatge-sintetica.com>, 2005
+# Josep Puigdemont <josep.puigdemont@gmail.com>, 2005
 #
 # Permission is granted to freely copy and distribute
 # this file and modified versions, provided that this
@@ -11,11 +11,11 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: util-linux-2.13-pre1\n"
+"Project-Id-Version: util-linux 2.13-pre3\n"
 "Report-Msgid-Bugs-To: Adrian Bunk <bunk@stusta.de>\n"
 "POT-Creation-Date: 2005-08-14 18:14+0200\n"
-"PO-Revision-Date: 2005-08-04 14:23+0200\n"
-"Last-Translator: Jordi Mallach <jordi@gnu.org>\n"
+"PO-Revision-Date: 2005-09-17 13:40+0200\n"
+"Last-Translator: Josep Puigdemont <josep.puigdemont@gmail.com>\n"
 "Language-Team: Catalan <ca@dodds.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -168,9 +168,9 @@ msgstr "forma d'ús: %s [ -n ] dispositiu\n"
 #: disk-utils/mkfs.cramfs.c:778 disk-utils/mkfs.minix.c:626
 #: disk-utils/mkswap.c:522 misc-utils/ddate.c:179 misc-utils/rename.c:79
 #: misc-utils/script.c:142 sys-utils/readprofile.c:197
-#, fuzzy, c-format
+#, c-format
 msgid "%s (%s)\n"
-msgstr "%s: %s (%s)\n"
+msgstr "%s (%s)\n"
 
 #: disk-utils/fdformat.c:130
 #, c-format
@@ -877,9 +877,9 @@ msgid "%s: Out of memory!\n"
 msgstr "%s: No hi ha prou memòria\n"
 
 #: disk-utils/mkfs.c:103
-#, fuzzy, c-format
+#, c-format
 msgid "mkfs (%s)\n"
-msgstr "%s: %s (%s)\n"
+msgstr "mkfs (%s)\n"
 
 #: disk-utils/mkfs.cramfs.c:124
 #, c-format
@@ -7222,9 +7222,9 @@ msgid "%s: can't read temporary file.\n"
 msgstr "%s: no s'hapogut llegir el fitxer temporal.\n"
 
 #: misc-utils/cal.c:313
-#, fuzzy, c-format
+#, c-format
 msgid "%s from %s\n"
-msgstr "%s des de %s%s\n"
+msgstr "%s de %s\n"
 
 #: misc-utils/cal.c:327
 msgid "illegal month value: use 1-12"
@@ -10197,13 +10197,6 @@ msgstr "Línia d'entrada massa llarga.\n"
 msgid "Out of memory when growing buffer.\n"
 msgstr ""
 "S'ha esgotat la memòria en augmentar la mida de la memòria intermèdia.\n"
-
-#, fuzzy
-#~ msgid "mkfs from %s\n"
-#~ msgstr "%s des de %s%s\n"
-
-#~ msgid "mkfs version %s (%s)\n"
-#~ msgstr "mkfs versió %s (%s)\n"
 
 #~ msgid "flock: unknown option, aborting.\n"
 #~ msgstr "flock: es desconeix l'opció, s'està avortant.\n"
